Fix cv avatar on mobile devices

--- a/_src/css/_cv.scss
+++ b/_src/css/_cv.scss
@@ -10,6 +10,7 @@
 
   &__image {
     margin: 1.5rem 1.5rem -5.5rem;
+    width: 82%;
   }
 
   &__headline {
